<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_200"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/mailEditTextLoginScreen"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rounded_edit_text"
        android:ems="10"
        android:hint="email"
        android:inputType="textPersonName"
        android:paddingLeft="16dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/passwordEditTextLoginScreen"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_edit_text"
        android:ems="10"
        android:hint="password"
        android:inputType="textPassword"
        android:paddingLeft="16dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/mailEditTextLoginScreen"
        app:layout_constraintStart_toStartOf="@+id/mailEditTextLoginScreen"
        app:layout_constraintTop_toBottomOf="@+id/mailEditTextLoginScreen" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginButtonLoginScreen"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_purple_button"
        android:textColor="@color/white"
        android:text="login"
        app:layout_constraintEnd_toEndOf="@+id/back_register_button_login_screen"
        app:layout_constraintStart_toStartOf="@+id/back_register_button_login_screen"
        app:layout_constraintTop_toBottomOf="@+id/back_register_button_login_screen" />

    <TextView
        android:id="@+id/back_register_button_login_screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="reigster"
        android:textColor="#546E7A"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/passwordEditTextLoginScreen"
        app:layout_constraintStart_toStartOf="@+id/passwordEditTextLoginScreen"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditTextLoginScreen" />

</androidx.constraintlayout.widget.ConstraintLayout>