<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_200"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/usernameEditTextReigsterScreen"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="usename"
        android:inputType="textPersonName"
        android:paddingLeft="16dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/emailTextEditRegisterScreen"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="email"
        android:inputType="textEmailAddress"
        android:paddingLeft="16dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/usernameEditTextReigsterScreen"
        app:layout_constraintStart_toStartOf="@+id/usernameEditTextReigsterScreen"
        app:layout_constraintTop_toBottomOf="@+id/usernameEditTextReigsterScreen" />

    <EditText
        android:id="@+id/passwordEditTextRegisterScreen"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="password"
        android:inputType="numberPassword"
        android:paddingLeft="16dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/emailTextEditRegisterScreen"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/emailTextEditRegisterScreen"
        app:layout_constraintTop_toBottomOf="@+id/emailTextEditRegisterScreen" />

    <Button
        android:id="@+id/loginButtonRegisterScreen"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:text="register"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/passwordEditTextRegisterScreen"
        app:layout_constraintStart_toStartOf="@+id/passwordEditTextRegisterScreen"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditTextRegisterScreen" />

    <TextView
        android:id="@+id/alreadyHaveAccoutTextViewRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Already have an account?"
        android:textColor="#546E7A"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/loginButtonRegisterScreen"
        app:layout_constraintStart_toStartOf="@+id/loginButtonRegisterScreen"
        app:layout_constraintTop_toBottomOf="@+id/loginButtonRegisterScreen" />

</androidx.constraintlayout.widget.ConstraintLayout>